--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>charity: water — Make Waves, Not Wishes</title>
   <link rel="stylesheet" href="styles.css" />
+  <link rel="icon" href="Assests/CW-favicon.jpg" type="image/jpeg" />
+  <link rel="apple-touch-icon" href="Assests/CW-favicon.jpg" />
 </head>
 <body>
   <div id="close" class="visually-hidden" aria-hidden="true"></div>
